- Get those unrequired fields and you'll feel as fresh as rain after a drought Files modified - [EditGISRecord,cx2,pom.xml]

--- a/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
+++ b/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
@@ -43,7 +43,7 @@
                                                 disabled="false"></wm-form-field>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn76">
-                                                <wm-form-field name="rentalProperty" displayname="Rental Property" show="true" primary-key="false" generator="assigned" key="rentalProperty" type="boolean" readonly="false" required="true" widget="checkbox"
+                                                <wm-form-field name="rentalProperty" displayname="Rental Property" show="true" primary-key="false" generator="assigned" key="rentalProperty" type="boolean" readonly="false" required="false" widget="checkbox"
                                                 defaultvalue="false"></wm-form-field>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
@@ -135,7 +135,7 @@
                                                 inputtype="text"></wm-form-field>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn55">
-                                                <wm-form-field name="isHostile" displayname="Is Hostile?" show="true" primary-key="false" generator="assigned" key="isHostile" type="boolean" readonly="false" required="true" widget="checkbox" defaultvalue="false"
+                                                <wm-form-field name="isHostile" displayname="Is Hostile?" show="true" primary-key="false" generator="assigned" key="isHostile" type="boolean" readonly="false" required="false" widget="checkbox" defaultvalue="false"
                                                 hint="If selected, appropriate safety precautions should be taken when visiting this property." placeholder=""></wm-form-field>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn name="gridcolumn1" columnwidth="4"></wm-gridcolumn>
