- restored the breadcrumbs on EditForm - updated column formatting on _viewForm/Fees to bold Unpaid fees and do nothing to Paid fees Files modified - [_viewForm,EditForm]

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -7,7 +7,7 @@
             <wm-layoutgrid name="layoutgrid4">
                 <wm-gridrow name="gridrow13">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn23">
-                        <wm-breadcrumb dataset="bind:letterVariables.BreadCrum.dataSet" itemlabel="label" itemicon="icon" itemlink="link" name="breadcrumb1"></wm-breadcrumb>
+                        <wm-breadcrumb dataset="bind:Variables.BreadCrum.dataSet" itemlabel="label" itemicon="icon" itemlink="link" name="breadcrumb1" show="true"></wm-breadcrumb>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow25_1">
