-added explanatory text to GIS/Notes - updated "Submit" text on NewForm wizard as requested - tweaked element spacing/size/etc on form header Files modified - [_viewForm,EditGISRecord,NewForm]

--- a/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
+++ b/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
@@ -334,7 +334,7 @@
                                 <wm-layoutgrid name="layoutgrid16">
                                     <wm-gridrow name="gridrow58" padding="unset unset 1em unset">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn121">
-                                            <wm-label padding="unset 0.5em" name="label28_1" caption="Notes on  this parcel"></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label28_1" caption="Municipality employees can communicate with each other regarding this GIS record here. These notes are only visible to Municipality employees."></wm-label>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow59">
