--- a/src/main/webapp/pages/NewForm/NewForm.html
+++ b/src/main/webapp/pages/NewForm/NewForm.html
@@ -376,6 +376,7 @@
                                     <wm-gridrow name="gridrow60_1" padding="2em unset">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn112">
                                             <wm-label padding="unset 0.5em" name="label32" caption="Please check the accuracy of the information you have provided in order to avoid delays in form processing, then click the &quot;Submit&quot; button in order to submit your form to the municipality."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label34_1" caption="If you would like to save your progress and return to complete your form later, you can use the &quot;Save as Draft&quot; button. Form Drafts are located on your &quot;Open Forms&quot; page."></wm-label>
                                             <wm-label padding="unset 0.5em" name="label33" caption="You can follow the progress of your form as it is processed by the municipality on your &quot;Open Forms&quot; and &quot;Closed Forms&quot; pages."></wm-label>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
