updated ViewProject modals to have correct icon Files modified - [ManageProjects,CompanyProjects,MunicipalityProjects,MyProjects]

--- a/src/main/webapp/pages/CompanyProjects/CompanyProjects.html
+++ b/src/main/webapp/pages/CompanyProjects/CompanyProjects.html
@@ -96,7 +96,7 @@
         </wm-dialog>
     </wm-view>
     <wm-view class="dialog-view" name="view12">
-        <wm-pagedialog name="pagedialogViewProject" title="View Project" oktext="Close" content="_viewProject" class="modal-larger" modal="true" iconclass="wi wi-find-in-page">
+        <wm-pagedialog name="pagedialogViewProject" title="View Project" oktext="Close" content="_viewProject" class="modal-larger" modal="true" iconclass="wi wi-building">
             <wm-param name="ProjectGUID" value="bind:Widgets.gridProjects.selecteditem.projectGuid" type="string"></wm-param>
         </wm-pagedialog>
     </wm-view>
