hiding Accounting Code from standard users on Forms/Fees. Updated newform dialog to match the others Files modified - [_viewForm,Main,pom.xml]

--- a/src/main/webapp/pages/Main/Main.html
+++ b/src/main/webapp/pages/Main/Main.html
@@ -129,7 +129,7 @@
     </wm-content>
     <wm-footer name="footer" content="footer"></wm-footer>
     <wm-view class="dialog-view" name="viewNewForm">
-        <wm-dialog dialogtype="design-dialog" modal="true" title="New Form" iconclass="wi wi-note-add" name="dialogNewForm">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Submit Form" iconclass="wi wi-note-add" name="dialogNewForm">
             <wm-panel iconclass="" autoclose="outsideClick" name="panelNewFormPage" content="newFormDialog" title="" class="panel-transparent" margin="0px">
                 <wm-param name="municipalityId" value="bind:Widgets.panelSelectMunicipality.Widgets.selectMunicipality.datavalue.ID" type="integer"></wm-param>
                 <wm-param name="dialogName" value="dialogNewForm" type="string"></wm-param>
