--- a/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
+++ b/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
@@ -381,7 +381,14 @@
                                 </wm-layoutgrid>
                             </wm-tabpane>
                             <wm-tabpane name="Map" title="Map">
-                                <wm-prefab prefabname="googlemaps" name="googlemapsGisForLATLNG" margin="1em unset" locations="bind:Variables.SelectedGISobj.firstRecord" markertype="LatLng" zoom="16" lat="latitude" lng="longitude" show="bind:!!Variables.SelectedGISobj.firstRecord.latitude &amp;&amp; Variables.SelectedGISobj.firstRecord.latitude != &quot;&quot;"></wm-prefab>
+                                <wm-layoutgrid name="layoutgrid11">
+                                    <wm-gridrow name="gridrow34">
+                                        <wm-gridcolumn columnwidth="12" name="gridcolumn70">
+                                            <wm-prefab prefabname="googlemaps" name="googlemapsGisFullAddress" margin="1em unset" locations="bind:Variables.SelectedGISobj.firstRecord" markertype="Address" zoom="16" show="true" address="fullAddress"></wm-prefab>
+                                        </wm-gridcolumn>
+                                    </wm-gridrow>
+                                    <wm-gridrow name="gridrow35"></wm-gridrow>
+                                </wm-layoutgrid>
                             </wm-tabpane>
                         </wm-tabs>
                     </wm-gridcolumn>
