--- a/src/main/webapp/pages/MunicipalityTransactions/MunicipalityTransactions.html
+++ b/src/main/webapp/pages/MunicipalityTransactions/MunicipalityTransactions.html
@@ -86,6 +86,7 @@
             <wm-layoutgrid name="layoutgrid2">
                 <wm-gridrow name="gridrow6">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn12">
+                        <wm-label padding="unset 0.5em" name="label7_1" caption="bind:'<strong>Paid By:</strong> ' + Widgets.gridTransactions.selecteditem.userName + '<br>'"></wm-label>
                         <wm-label padding="unset 0.5em" name="label6_1" caption="bind:'<h4>Transaction Comments</h4><p>' + Widgets.gridTransactions.selecteditem.transactionComments + '</p>'"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
