EditGISRecord- updated spacing and color scheme of charts. Showing "New Transaction" and Forms tab to muniemployees. Main- adjusted spacing of MyFees tile  elements MyMunicipality- fixed the Submit Form dialog to show munis for users with only one Files modified - [EditGISRecord,Main,MyMunicipality,pom.xml]

--- a/src/main/webapp/pages/MyMunicipality/MyMunicipality.html
+++ b/src/main/webapp/pages/MyMunicipality/MyMunicipality.html
@@ -150,7 +150,7 @@
     <wm-view class="dialog-view" name="viewNewForm">
         <wm-dialog dialogtype="design-dialog" modal="true" title="New Form" iconclass="wi wi-note-add" name="dialogNewForm">
             <wm-panel iconclass="" autoclose="outsideClick" name="panelNewFormPage" content="newFormDialog" title="" class="panel-transparent" margin="0px">
-                <wm-param name="municipalityId" value="bind:Widgets.panelSelectMunicipality.Widgets.selectMunicipality.datavalue.ID" type="integer"></wm-param>
+                <wm-param name="municipalityId" value="bind:Widgets.selectStandardUserMunicipalites.datavalue.ID" type="integer"></wm-param>
                 <wm-param name="dialogName" value="dialogNewForm" type="string"></wm-param>
             </wm-panel>
         </wm-dialog>
