--- a/src/main/webapp/pages/newFormDialog/newFormDialog.html
+++ b/src/main/webapp/pages/newFormDialog/newFormDialog.html
@@ -3,7 +3,7 @@
         <wm-layoutgrid name="layoutgrid1">
             <wm-gridrow name="gridrow1">
                 <wm-gridcolumn columnwidth="12" name="gridcolumn1">
-                    <wm-composite name="composite4_1" show="bind:Variables.StandardUserMunicipalities.dataSet.content.length > 1" padding="unset unset 2em unset">
+                    <wm-composite name="composite4_1" show="bind:Variables.StandardUserMunicipalities.dataSet.content.length > 1 &amp;&amp; pageParams.muniSelectedByPage !== true" padding="unset unset 2em unset">
                         <wm-label class="col-md-3 form-control-static" caption="Select Municipality" name="label20" width="160px" fontweight="bold"></wm-label>
                         <wm-container class="col-md-9" name="container4" width="240px">
                             <wm-select dataset="bind:Variables.StandardUserMunicipalities.dataSet" datafield="ID" displayfield="MunicipalityName" name="selectMunicipality" orderby="MunicipalityName:asc" placeholder="Select Municipality" on-change="selectMunicipalityChange($event, $scope, newVal, oldVal)"></wm-select>
